test: add test for the getAicArtworks method